apps/music/styles/globals.css
:root {
  --black: hsl(180, 2%, 8%);
  --gray: hsl(210, 4%, 29%);
  --dark-gray: hsl(210, 3%, 15%);
  --light-gray: hsl(216, 3%, 29%);
  --white: hsl(223, 10%, 87%);

  --bg: var(--dark-gray);
  --bg-accent: var(--light-gray);
  --text-color: var(--white);
  --nav-size: 60px;
  --border: 1px solid var(--gray);
  --border-radius: 8px;
  --speed: 500ms;
}

html,
body {
  padding: 0;
  background: var(--black);
  margin: 0;
  font-family: roboto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  color: var(--text-color);
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

/* DEBUGGING USE */
/* body {
  margin: 0;
  background: #151616;
  font-family: roboto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
} */

/* code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
} */

/* :root {
  --bg: #242526;
  --bg-accent: #484a4d;
  --text-color: #dadce1;
  --nav-size: 60px;
  --border: 1px solid #474a4d;
  --border-radius: 8px;
  --speed: 500ms;
} */

/* ul {
  list-style: none;
  margin: 0;
  padding: 0;
} */

/* a {
  color: var(--text-color);
  text-decoration: none;
} */

/* Top Navigation Bar */

/* <nav> */
/* .navbar {
  height: var(--nav-size);
  background-color: var(--bg);
  padding: 0 1rem;
  border-bottom: var(--border);
} */

/* <ul> */
/* .navbar-nav {
  max-width: 100%;
  height: 100%;
  display: flex;
  justify-content: flex-end;
} */

/* <li> */
/* .nav-item {
  width: calc(var(--nav-size) * 0.8);
  display: flex;
  align-items: center;
  justify-content: center;
} */

/* Icon Button */
/* .icon-button {
  --button-size: calc(var(--nav-size) * 0.5);
  width: var(--button-size);
  height: var(--button-size);
  background-color: #484a4d;
  border-radius: 50%;
  padding: 5px;
  margin: 2px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: filter 300ms;
}

.icon-button:hover {
  filter: brightness(2);
}

.icon-button svg {
  fill: var(--text-color);
  width: 20px;
  height: 20px;
} */

/* Dropdown Menu */

/* .dropdown {
  position: absolute;
  top: 58px;
  width: 300px;
  transform: translateX(-45%);
  background-color: var(--bg);
  border: var(--border);
  border-radius: var(--border-radius);
  padding: 1rem;
  overflow: hidden;
  transition: height var(--speed) ease;
} */

/* .menu {
  width: 100%;
} */

/* .menu-item {
  height: 50px;
  display: flex;
  align-items: center;
  border-radius: var(--border-radius);
  transition: background var(--speed);
  padding: 0.5rem;
} */

/* .menu-item .icon-button {
  margin-right: 0.5rem;
} */

/* .menu-item .icon-button:hover {
  filter: none;
} */

/* .menu-item:hover {
  background-color: #525357;
} */

/* .icon-right {
  margin-left: auto;
} */

